# keropos-ui

./: LICENSE  README.md  package-lock.json  package.json  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/tauri-plugin-spp-printer/: Cargo.toml  build.rs
src-tauri/tauri-plugin-spp-printer/android/: .gitignore  build.gradle.kts
src-tauri/tauri-plugin-spp-printer/android/src/main/kotlin/com/kaya/purdia/sppprinter/: SppPrinterPlugin.kt
src-tauri/tauri-plugin-spp-printer/permissions/autogenerated/: reference.md
src-tauri/tauri-plugin-spp-printer/permissions/autogenerated/commands/: list_paired.toml
src-tauri/tauri-plugin-spp-printer/permissions/schemas/: schema.json
src-tauri/tauri-plugin-spp-printer/src/: lib.rs
src/assets/: main.css
src/components/charts/: BarChart.vue  DoughnutChart.vue  LineChart.vue  index.ts
src/components/layout/: DashboardLayout.vue  SidebarNav.vue  TopBar.vue
src/components/pos/: CashNumpad.vue  IncomingOrdersModal.vue  ModifierPickerModal.vue
src/components/ui/: BaseAlert.vue  BaseAvatar.vue  BaseBadge.vue  BaseBreadcrumb.vue  BaseButton.vue  BaseCard.vue  BaseDatePicker.vue  BaseEditor.vue  BaseFileUpload.vue  BaseInput.vue  BaseModal.vue  BasePagination.vue  BaseProgress.vue  BaseSelect.vue  BaseSkeleton.vue  BaseTable.vue  BaseTabs.vue  BaseToggle.vue  ButtonGroup.vue  DropdownButton.vue  StatCard.vue  TabPanel.vue  index.ts  (+2 more)
src/composables/: index.ts  useApi.ts  usePagination.ts  useToast.ts
src/lib/: config.ts  crypto.ts  http.ts  printer.ts  receipt.ts  terminal.ts
src/pages/: ChangePasswordPage.vue  DashboardPage.vue  ProfilePage.vue
src/router/: index.ts
src/stores/: auth.ts  pos.ts  theme.ts  toast.ts
(+175 files in other folders)
