[package]
name = "tauri-plugin-spp-printer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
# Cargo build-script metadata key: build.rs emits `cargo:android_library_path`
# under this name, which `tauri_build::build()` (in apps/purdia/src-tauri's
# own build.rs) picks up as `DEP_SPP_PRINTER_ANDROID_LIBRARY_PATH` to wire
# `android/` in as a Gradle module — see tauri-build's mobile::generate_gradle_files.
links = "spp-printer"

[lints]
workspace = true

[lib]
name = "tauri_plugin_spp_printer"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dependencies]
tauri = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
